# bpqmon

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
src/bpqmon/: bpqmon.py  connection_handler.py  fancy_terminal.py  layout.tcss  mqtt.py  plain_terminal.py
tests/: test_parser.py
